<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="8dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/str_cliente"
            android:inputType="text"
            android:textSize="30sp"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_fecha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/str_fecha"
            android:inputType="date"
            android:maxLines="1"
            android:paddingEnd="4dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_hora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/str_hora"
            android:inputType="time"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:textSize="20sp" />


        />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCC" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_descri_rapida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/str_descr_rapida"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCC" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_decripcion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_descricion"
            android:textSize="20sp"

            />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCC" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:hint="TOTAL"
            android:textSize="20sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_precio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <EditText
                android:id="@+id/edit_precioEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_precio"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="end"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:hint="Abono:"
            android:textSize="20sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_abono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <EditText
                android:id="@+id/edit_abonoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/str_abono"
                android:inputType="numberDecimal"
                android:layout_gravity="end"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:hint="Saldo"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_saldo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="Acuatice Saldo"
            android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
    </GridLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_cancelar"

            />

        <Button
            android:id="@+id/btn_cambiar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cambiar"

            />
    </LinearLayout>

</LinearLayout>